# french_number_practice

./: README.md  docker-compose.yaml  french_number_practice.py  pyproject.toml  test.py
docker/: Dockerfile
src/: french_number_practice.py  test_french_number_practice.py
src/french_number_practice/: cli.py
tests/: test_french_number_practice.py
